# IAL-expertise

./: .gitignore  Makefile  README.md  deploy.sh  make_json_for_experts_doc.sh  put_bfx  pyproject.toml  taskinfo.expertise.continuity.json  tbinterface_outputexpert.json  test.py
davai_tbx/: __init__.py  expertise.py  hooks.py  jobs.py  util.py
davai_tbx/experts/: __init__.py  assim.py  build.py  fields.py  oops.py  profiling.py  setup.py  tbinterface_outputexpert.json  thresholds.py  util.py
ial_expertise/: __init__.py  task.py
ial_expertise/experts/: fields.py
src/ial_expertise/: __init__.py  task.py
src/ial_expertise/experts/: __init__.py  assim.py  build.py  fields.py  oops.py  profiling.py  setup.py  thresholds.py
tests/: plot_bator_profile.py  test_experts.py
